# ops-engine

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: enforce-release-name.yml
examples/layover-template/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  main.py
src/ops_engine/: __init__.py  config_loader.py
src/ops_engine/adapters/: base.py  forgejo_adapter.py  github_adapter.py
src/ops_engine/core/: event_dedup.py  queue_manager.py
src/ops_engine/modules/: dependency_trigger.py  dispatcher.py  health_monitor.py  merge.py  mirror.py  notification.py  release.py  stale_manager.py  triage.py
src/ops_engine/utils/: changelog_parser.py
tests/: conftest.py  test_adapter_pr.py  test_changelog_parser.py  test_config_loader.py  test_event_dedup.py  test_merge_handler.py  test_queue_manager.py  test_release_handler.py
