[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ops-engine"
version = "0.1.0"
description = "Generic, rate-limited async webhook queue for GitHub and Forgejo."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "LangeVC", email = "oss@langevc.com" }
]
dependencies = [
    "pydantic>=2.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ops_engine"]
