[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ops-engine"
version = "2.0.0"
description = "Event-driven multi-org release orchestration engine for GitHub and Forgejo."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "LangeVC", email = "oss@langevc.com" }
]
dependencies = [
    "pydantic>=2.5.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ops_engine"]
